Update html and css files

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="content">
             <div class="group-17">
                 <div class="rectangle-21"></div>
-                <div class="an-unnecessary-introduction roboto-normal-grandis-18px">AN UNNECESSARY INTRODUCTION</div>
+                <div class="an-unnecessary-introduction">AN UNNECESSARY INTRODUCTION</div>
             </div>
             <h1 class="title">Allynexx.</h1>
         </div>
         <img class="bg-content" src="bg-content.png" />
         <div class="header">
-            <div class="equipment gilroy-bold-white-18px">Equipment</div>
-            <div class="about-us gilroy-bold-white-18px">About us</div>
-            <div class="blog gilroy-bold-white-18px">Blog</div>
+            <div class="equipment">Equipment</div>
+            <div class="about-us">About us</div>
+            <div class="blog">Blog</div>
             <div class="account">
                 <div class="account-1">Account</div>
                 <img class="icons-general-cart" src="icon-general-cart.svg" />
@@ -34,14 +34,14 @@
                     <div class="content-3">
                         <div class="tagline">
                             <div class="line"></div>
-                            <div class="what-and-whys-this roboto-normal-grandis-18px">WHAT AND WHY'S THIS?</div>
+                            <div class="what-and-whys-this">WHAT AND WHY'S THIS?</div>
                         </div>
                         <div class="funny-enough-i-made-this-for-fun">Funny enough, I made this for fun.</div>
                         <div class="deep-down-i-adore-t">
                             Deep down, I adore the aesthetic of everything. Loving the pure innocence of cats, despite their "catfishy" looks,&nbsp;may fool you. Playing around with things which I clearly can't understand (like people's feelings). Trying to listen to ShibayanRecords without getting sleepy when studying. A guy, who is somewhat a weeb with lots of fantasies but knows how not to be a loser.
                         </div>
                         <div class="more">
-                            <div class="equipment-2 roboto-normal-grandis-18px">more</div>
+                            <div class="equipment-2">more</div>
                             <img class="iconnavigationarrow_downward_24px" src="icon-navigation-arrow-downward-24px.svg" />
                         </div>
                     </div>
@@ -54,18 +54,18 @@
                     <div class="time-is-precious-waste-it-wisely">"Time is precious. Waste it wisely."</div>
                 </div>
                 <div class="links">
-                    <div class="more-on gilroy-bold-grandis-24px">More on The Blog</div>
-                    <div class="about-mntn gilroy-medium-white-18px">About MNTN</div>
-                    <div class="contributors-writers gilroy-medium-white-18px">Contributors &amp; Writers</div>
-                    <div class="write-for-us gilroy-medium-white-18px">Write For Us</div>
-                    <div class="contact-us gilroy-medium-white-18px">Contact Us</div>
-                    <div class="privacy-policy gilroy-medium-white-18px">Privacy Policy</div>
+                    <div class="more-on">More on The Blog</div>
+                    <div class="about-mntn">About MNTN</div>
+                    <div class="contributors-writers">Contributors &amp; Writers</div>
+                    <div class="write-for-us">Write For Us</div>
+                    <div class="contact-us">Contact Us</div>
+                    <div class="privacy-policy">Privacy Policy</div>
                 </div>
                 <div class="links-1">
-                    <div class="more-on gilroy-bold-grandis-24px">More on MNTN</div>
-                    <div class="the-team gilroy-medium-white-18px">The Team</div>
-                    <div class="jobs gilroy-medium-white-18px">Jobs</div>
-                    <div class="press gilroy-medium-white-18px">Press</div>
+                    <div class="more-on">More on MNTN</div>
+                    <div class="the-team">The Team</div>
+                    <div class="jobs">Jobs</div>
+                    <div class="press">Press</div>
                 </div>
             </div>
         </div>
