--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="home screen">
     <div class="overlap-group1">
-        <img class="bg" src="bg.png" />
+        <img class="bg" src="/stuff/BG.png" />
         <div class="content">
             <div class="group-17">
                 <div class="rectangle-21"></div>
@@ -17,20 +17,20 @@
             </div>
             <h1 class="title">Allynexx.</h1>
         </div>
-        <img class="bg-content" src="bg-content.png" />
+        <img class="bg-content" src="/stuff/BG Content.png" />
         <div class="header">
             <div class="equipment">Equipment</div>
             <div class="about-us">About us</div>
             <div class="blog">Blog</div>
             <div class="account">
                 <div class="account-1">Account</div>
-                <img class="icons-general-cart" src="icon-general-cart.svg" />
+                <img class="icons-general-cart" src="/stuff/icons-general---cart@2x.svg" />
             </div>
         </div>
         <div class="content-1">
             <div class="content-2">
                 <div class="overlap-group">
-                    <img class="equipment-1" src="equipment.png" />
+                    <img class="equipment-1" src="/stuff/equipment@1x.png" />
                     <div class="content-3">
                         <div class="tagline">
                             <div class="line"></div>
@@ -42,11 +42,11 @@
                         </div>
                         <div class="more">
                             <div class="equipment-2">more</div>
-                            <img class="iconnavigationarrow_downward_24px" src="icon-navigation-arrow-downward-24px.svg" />
+                            <img class="iconnavigationarrow_downward_24px" src="/stuff/icon-navigation-arrow-downward-24px@2x.svg" />
                         </div>
                     </div>
                 </div>
-                <img class="x01" src="01.png" />
+                <img class="x01" src="/stuff/01@1x.png" />
             </div>
             <div class="footer">
                 <div class="flex-col">
