--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="home screen">
     <div class="overlap-group1">
-        <img class="bg" src="/stuff/BG.png" />
+        <img class="bg" src="/a-messy-repo/stuff/BG.png" />
         <div class="content">
             <div class="group-17">
                 <div class="rectangle-21"></div>
