--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="home screen">
+  <div class="home">
     <div class="overlap-group1">
         <img class="bg" src="/a-messy-repo/stuff/BG.png" />
         <div class="content">
